imagen.output
No terminales inútiles en la gramática

    expresion_booleana


Terminales no usados en la gramática

    TRUE
    FALSE
    IGUAL
    AND


Reglas inútiles en la gramática

   52 expresion_booleana: TRUE
   53                   | FALSE
   54                   | expresion IGUAL expresion
   55                   | expresion_booleana AND expresion_booleana


La regla es inútil debido a los conflictos

   20 lista_parametros: expresion COMA expresion COMA expresion


Estado 2 conflictos: 1 desplazamiento/reducción
Estado 13 conflictos: 1 reducción/reducción
Estado 33 conflictos: 1 reducción/reducción
Estado 83 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: saltos opt_variables saltos seccion_figuras saltos lista_imagenes saltos

    2 saltos: ε
    3       | saltos '\n'

    4 opt_variables: ε
    5              | VARIABLES saltos lista_declaraciones

    6 lista_declaraciones: declaracion
    7                    | lista_declaraciones saltos declaracion

    8 declaracion: tipo lista_identificadores
    9            | tipo IDENTIFICADOR ASIGNACION expresion
   10            | IDENTIFICADOR ASIGNACION expresion

   11 tipo: ENTERO
   12     | REAL
   13     | BOOL

   14 lista_identificadores: IDENTIFICADOR
   15                      | lista_identificadores COMA IDENTIFICADOR

   16 seccion_figuras: FIGURAS saltos lista_figuras

   17 lista_figuras: figura
   18              | lista_figuras saltos figura

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura lista_parametros COMA color PAR_DER

   20 lista_parametros: expresion COMA expresion COMA expresion
   21                 | expresion COMA expresion COMA expresion COMA expresion

   22 tipo_figura: CIRCULO
   23            | RECTANGULO
   24            | CUADRADO

   25 color: ROJO
   26      | VERDE
   27      | AZUL
   28      | NARANJA
   29      | MARRON
   30      | AMARILLO
   31      | NEGRO
   32      | GRIS

   33 lista_imagenes: imagen
   34               | lista_imagenes saltos imagen

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN

   36 lista_acciones: instruccion
   37               | lista_acciones saltos instruccion

   38 instruccion: PONER IDENTIFICADOR
   39            | BORRAR IDENTIFICADOR
   40            | HORIZONTAL IDENTIFICADOR expresion
   41            | VERTICAL IDENTIFICADOR expresion
   42            | PAUSA expresion
   43            | IDENTIFICADOR ASIGNACION expresion

   44 expresion: NUM
   45          | NUMREAL
   46          | IDENTIFICADOR
   47          | expresion '+' expresion
   48          | expresion '-' expresion
   49          | expresion '*' expresion
   50          | expresion '/' expresion
   51          | PAR_IZQ expresion PAR_DER


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3
    '*' (42) 49
    '+' (43) 47
    '-' (45) 48
    '/' (47) 50
    error (256)
    NUM <entero> (258) 44
    NUMREAL <real> (259) 45
    IDENTIFICADOR <str> (260) 9 10 14 15 19 38 39 40 41 43 46
    CADENA <str> (261) 35
    VARIABLES (262) 5
    ENTERO (263) 11
    REAL (264) 12
    BOOL (265) 13
    FIGURAS (266) 16
    IMAGEN (267) 35
    FINIMAGEN (268) 35
    PONER (269) 38
    BORRAR (270) 39
    HORIZONTAL (271) 40
    VERTICAL (272) 41
    PAUSA (273) 42
    CIRCULO (274) 22
    RECTANGULO (275) 23
    CUADRADO (276) 24
    ROJO (277) 25
    VERDE (278) 26
    AZUL (279) 27
    NARANJA (280) 28
    MARRON (281) 29
    AMARILLO (282) 30
    NEGRO (283) 31
    GRIS (284) 32
    TRUE (285)
    FALSE (286)
    IGUAL (287)
    AND (288)
    COMA (289) 15 19 20 21 35
    PAR_IZQ (290) 19 35 51
    PAR_DER (291) 19 35 51
    ASIGNACION (292) 9 10 19 43


No terminales con las reglas donde aparecen

    $accept (43)
        on left: 0
    programa (44)
        on left: 1
        on right: 0
    saltos (45)
        on left: 2 3
        on right: 1 3 5 7 16 18 34 35 37
    opt_variables (46)
        on left: 4 5
        on right: 1
    lista_declaraciones (47)
        on left: 6 7
        on right: 5 7
    declaracion (48)
        on left: 8 9 10
        on right: 6 7
    tipo (49)
        on left: 11 12 13
        on right: 8 9
    lista_identificadores (50)
        on left: 14 15
        on right: 8 15
    seccion_figuras (51)
        on left: 16
        on right: 1
    lista_figuras (52)
        on left: 17 18
        on right: 16 18
    figura (53)
        on left: 19
        on right: 17 18
    lista_parametros (54)
        on left: 20 21
        on right: 19
    tipo_figura (55)
        on left: 22 23 24
        on right: 19
    color (56)
        on left: 25 26 27 28 29 30 31 32
        on right: 19
    lista_imagenes (57)
        on left: 33 34
        on right: 1 34
    imagen (58)
        on left: 35
        on right: 33 34
    lista_acciones (59)
        on left: 36 37
        on right: 35 37
    instruccion (60)
        on left: 38 39 40 41 42 43
        on right: 36 37
    expresion <real> (61)
        on left: 44 45 46 47 48 49 50 51
        on right: 9 10 20 21 35 40 41 42 43 47 48 49 50 51


Estado 0

    0 $accept: • programa $end

    $default  reduce usando la regla 2 (saltos)

    programa  ir al estado 1
    saltos    ir al estado 2


Estado 1

    0 $accept: programa • $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: saltos • opt_variables saltos seccion_figuras saltos lista_imagenes saltos
    3 saltos: saltos • '\n'

    VARIABLES  desplazar e ir al estado 4
    '\n'       desplazar e ir al estado 5

    '\n'      [reduce usando la regla 4 (opt_variables)]
    $default  reduce usando la regla 4 (opt_variables)

    opt_variables  ir al estado 6


Estado 3

    0 $accept: programa $end •

    $default  aceptar


Estado 4

    5 opt_variables: VARIABLES • saltos lista_declaraciones

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 7


Estado 5

    3 saltos: saltos '\n' •

    $default  reduce usando la regla 3 (saltos)


Estado 6

    1 programa: saltos opt_variables • saltos seccion_figuras saltos lista_imagenes saltos

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 8


Estado 7

    3 saltos: saltos • '\n'
    5 opt_variables: VARIABLES saltos • lista_declaraciones

    IDENTIFICADOR  desplazar e ir al estado 9
    ENTERO         desplazar e ir al estado 10
    REAL           desplazar e ir al estado 11
    BOOL           desplazar e ir al estado 12
    '\n'           desplazar e ir al estado 5

    lista_declaraciones  ir al estado 13
    declaracion          ir al estado 14
    tipo                 ir al estado 15


Estado 8

    1 programa: saltos opt_variables saltos • seccion_figuras saltos lista_imagenes saltos
    3 saltos: saltos • '\n'

    FIGURAS  desplazar e ir al estado 16
    '\n'     desplazar e ir al estado 5

    seccion_figuras  ir al estado 17


Estado 9

   10 declaracion: IDENTIFICADOR • ASIGNACION expresion

    ASIGNACION  desplazar e ir al estado 18


Estado 10

   11 tipo: ENTERO •

    $default  reduce usando la regla 11 (tipo)


Estado 11

   12 tipo: REAL •

    $default  reduce usando la regla 12 (tipo)


Estado 12

   13 tipo: BOOL •

    $default  reduce usando la regla 13 (tipo)


Estado 13

    5 opt_variables: VARIABLES saltos lista_declaraciones •
    7 lista_declaraciones: lista_declaraciones • saltos declaracion

    FIGURAS   reduce usando la regla 5 (opt_variables)
    '\n'      reduce usando la regla 2 (saltos)
    '\n'      [reduce usando la regla 5 (opt_variables)]
    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 19


Estado 14

    6 lista_declaraciones: declaracion •

    $default  reduce usando la regla 6 (lista_declaraciones)


Estado 15

    8 declaracion: tipo • lista_identificadores
    9            | tipo • IDENTIFICADOR ASIGNACION expresion

    IDENTIFICADOR  desplazar e ir al estado 20

    lista_identificadores  ir al estado 21


Estado 16

   16 seccion_figuras: FIGURAS • saltos lista_figuras

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 22


Estado 17

    1 programa: saltos opt_variables saltos seccion_figuras • saltos lista_imagenes saltos

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 23


Estado 18

   10 declaracion: IDENTIFICADOR ASIGNACION • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 28


Estado 19

    3 saltos: saltos • '\n'
    7 lista_declaraciones: lista_declaraciones saltos • declaracion

    IDENTIFICADOR  desplazar e ir al estado 9
    ENTERO         desplazar e ir al estado 10
    REAL           desplazar e ir al estado 11
    BOOL           desplazar e ir al estado 12
    '\n'           desplazar e ir al estado 5

    declaracion  ir al estado 29
    tipo         ir al estado 15


Estado 20

    9 declaracion: tipo IDENTIFICADOR • ASIGNACION expresion
   14 lista_identificadores: IDENTIFICADOR •

    ASIGNACION  desplazar e ir al estado 30

    $default  reduce usando la regla 14 (lista_identificadores)


Estado 21

    8 declaracion: tipo lista_identificadores •
   15 lista_identificadores: lista_identificadores • COMA IDENTIFICADOR

    COMA  desplazar e ir al estado 31

    $default  reduce usando la regla 8 (declaracion)


Estado 22

    3 saltos: saltos • '\n'
   16 seccion_figuras: FIGURAS saltos • lista_figuras

    IDENTIFICADOR  desplazar e ir al estado 32
    '\n'           desplazar e ir al estado 5

    lista_figuras  ir al estado 33
    figura         ir al estado 34


Estado 23

    1 programa: saltos opt_variables saltos seccion_figuras saltos • lista_imagenes saltos
    3 saltos: saltos • '\n'

    IMAGEN  desplazar e ir al estado 35
    '\n'    desplazar e ir al estado 5

    lista_imagenes  ir al estado 36
    imagen          ir al estado 37


Estado 24

   44 expresion: NUM •

    $default  reduce usando la regla 44 (expresion)


Estado 25

   45 expresion: NUMREAL •

    $default  reduce usando la regla 45 (expresion)


Estado 26

   46 expresion: IDENTIFICADOR •

    $default  reduce usando la regla 46 (expresion)


Estado 27

   51 expresion: PAR_IZQ • expresion PAR_DER

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 38


Estado 28

   10 declaracion: IDENTIFICADOR ASIGNACION expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 10 (declaracion)


Estado 29

    7 lista_declaraciones: lista_declaraciones saltos declaracion •

    $default  reduce usando la regla 7 (lista_declaraciones)


Estado 30

    9 declaracion: tipo IDENTIFICADOR ASIGNACION • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 43


Estado 31

   15 lista_identificadores: lista_identificadores COMA • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 44


Estado 32

   19 figura: IDENTIFICADOR • ASIGNACION PAR_IZQ tipo_figura lista_parametros COMA color PAR_DER

    ASIGNACION  desplazar e ir al estado 45


Estado 33

   16 seccion_figuras: FIGURAS saltos lista_figuras •
   18 lista_figuras: lista_figuras • saltos figura

    IMAGEN    reduce usando la regla 16 (seccion_figuras)
    '\n'      reduce usando la regla 2 (saltos)
    '\n'      [reduce usando la regla 16 (seccion_figuras)]
    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 46


Estado 34

   17 lista_figuras: figura •

    $default  reduce usando la regla 17 (lista_figuras)


Estado 35

   35 imagen: IMAGEN • PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN

    PAR_IZQ  desplazar e ir al estado 47


Estado 36

    1 programa: saltos opt_variables saltos seccion_figuras saltos lista_imagenes • saltos
   34 lista_imagenes: lista_imagenes • saltos imagen

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 48


Estado 37

   33 lista_imagenes: imagen •

    $default  reduce usando la regla 33 (lista_imagenes)


Estado 38

   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion
   51          | PAR_IZQ expresion • PAR_DER

    PAR_DER  desplazar e ir al estado 49
    '+'      desplazar e ir al estado 39
    '-'      desplazar e ir al estado 40
    '*'      desplazar e ir al estado 41
    '/'      desplazar e ir al estado 42


Estado 39

   47 expresion: expresion '+' • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 50


Estado 40

   48 expresion: expresion '-' • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 51


Estado 41

   49 expresion: expresion '*' • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 52


Estado 42

   50 expresion: expresion '/' • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 53


Estado 43

    9 declaracion: tipo IDENTIFICADOR ASIGNACION expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 9 (declaracion)


Estado 44

   15 lista_identificadores: lista_identificadores COMA IDENTIFICADOR •

    $default  reduce usando la regla 15 (lista_identificadores)


Estado 45

   19 figura: IDENTIFICADOR ASIGNACION • PAR_IZQ tipo_figura lista_parametros COMA color PAR_DER

    PAR_IZQ  desplazar e ir al estado 54


Estado 46

    3 saltos: saltos • '\n'
   18 lista_figuras: lista_figuras saltos • figura

    IDENTIFICADOR  desplazar e ir al estado 32
    '\n'           desplazar e ir al estado 5

    figura  ir al estado 55


Estado 47

   35 imagen: IMAGEN PAR_IZQ • expresion COMA expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 56


Estado 48

    1 programa: saltos opt_variables saltos seccion_figuras saltos lista_imagenes saltos •
    3 saltos: saltos • '\n'
   34 lista_imagenes: lista_imagenes saltos • imagen

    IMAGEN  desplazar e ir al estado 35
    '\n'    desplazar e ir al estado 5

    $default  reduce usando la regla 1 (programa)

    imagen  ir al estado 57


Estado 49

   51 expresion: PAR_IZQ expresion PAR_DER •

    $default  reduce usando la regla 51 (expresion)


Estado 50

   47 expresion: expresion • '+' expresion
   47          | expresion '+' expresion •
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 47 (expresion)


Estado 51

   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   48          | expresion '-' expresion •
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 48 (expresion)


Estado 52

   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   49          | expresion '*' expresion •
   50          | expresion • '/' expresion

    $default  reduce usando la regla 49 (expresion)


Estado 53

   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion
   50          | expresion '/' expresion •

    $default  reduce usando la regla 50 (expresion)


Estado 54

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ • tipo_figura lista_parametros COMA color PAR_DER

    CIRCULO     desplazar e ir al estado 58
    RECTANGULO  desplazar e ir al estado 59
    CUADRADO    desplazar e ir al estado 60

    tipo_figura  ir al estado 61


Estado 55

   18 lista_figuras: lista_figuras saltos figura •

    $default  reduce usando la regla 18 (lista_figuras)


Estado 56

   35 imagen: IMAGEN PAR_IZQ expresion • COMA expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    COMA  desplazar e ir al estado 62
    '+'   desplazar e ir al estado 39
    '-'   desplazar e ir al estado 40
    '*'   desplazar e ir al estado 41
    '/'   desplazar e ir al estado 42


Estado 57

   34 lista_imagenes: lista_imagenes saltos imagen •

    $default  reduce usando la regla 34 (lista_imagenes)


Estado 58

   22 tipo_figura: CIRCULO •

    $default  reduce usando la regla 22 (tipo_figura)


Estado 59

   23 tipo_figura: RECTANGULO •

    $default  reduce usando la regla 23 (tipo_figura)


Estado 60

   24 tipo_figura: CUADRADO •

    $default  reduce usando la regla 24 (tipo_figura)


Estado 61

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura • lista_parametros COMA color PAR_DER

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    lista_parametros  ir al estado 63
    expresion         ir al estado 64


Estado 62

   35 imagen: IMAGEN PAR_IZQ expresion COMA • expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 65


Estado 63

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura lista_parametros • COMA color PAR_DER

    COMA  desplazar e ir al estado 66


Estado 64

   20 lista_parametros: expresion • COMA expresion COMA expresion
   21                 | expresion • COMA expresion COMA expresion COMA expresion
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    COMA  desplazar e ir al estado 67
    '+'   desplazar e ir al estado 39
    '-'   desplazar e ir al estado 40
    '*'   desplazar e ir al estado 41
    '/'   desplazar e ir al estado 42


Estado 65

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion • COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    COMA  desplazar e ir al estado 68
    '+'   desplazar e ir al estado 39
    '-'   desplazar e ir al estado 40
    '*'   desplazar e ir al estado 41
    '/'   desplazar e ir al estado 42


Estado 66

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura lista_parametros COMA • color PAR_DER

    ROJO      desplazar e ir al estado 69
    VERDE     desplazar e ir al estado 70
    AZUL      desplazar e ir al estado 71
    NARANJA   desplazar e ir al estado 72
    MARRON    desplazar e ir al estado 73
    AMARILLO  desplazar e ir al estado 74
    NEGRO     desplazar e ir al estado 75
    GRIS      desplazar e ir al estado 76

    color  ir al estado 77


Estado 67

   20 lista_parametros: expresion COMA • expresion COMA expresion
   21                 | expresion COMA • expresion COMA expresion COMA expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 78


Estado 68

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA • CADENA PAR_DER saltos lista_acciones FINIMAGEN

    CADENA  desplazar e ir al estado 79


Estado 69

   25 color: ROJO •

    $default  reduce usando la regla 25 (color)


Estado 70

   26 color: VERDE •

    $default  reduce usando la regla 26 (color)


Estado 71

   27 color: AZUL •

    $default  reduce usando la regla 27 (color)


Estado 72

   28 color: NARANJA •

    $default  reduce usando la regla 28 (color)


Estado 73

   29 color: MARRON •

    $default  reduce usando la regla 29 (color)


Estado 74

   30 color: AMARILLO •

    $default  reduce usando la regla 30 (color)


Estado 75

   31 color: NEGRO •

    $default  reduce usando la regla 31 (color)


Estado 76

   32 color: GRIS •

    $default  reduce usando la regla 32 (color)


Estado 77

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura lista_parametros COMA color • PAR_DER

    PAR_DER  desplazar e ir al estado 80


Estado 78

   20 lista_parametros: expresion COMA expresion • COMA expresion
   21                 | expresion COMA expresion • COMA expresion COMA expresion
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    COMA  desplazar e ir al estado 81
    '+'   desplazar e ir al estado 39
    '-'   desplazar e ir al estado 40
    '*'   desplazar e ir al estado 41
    '/'   desplazar e ir al estado 42


Estado 79

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA • PAR_DER saltos lista_acciones FINIMAGEN

    PAR_DER  desplazar e ir al estado 82


Estado 80

   19 figura: IDENTIFICADOR ASIGNACION PAR_IZQ tipo_figura lista_parametros COMA color PAR_DER •

    $default  reduce usando la regla 19 (figura)


Estado 81

   20 lista_parametros: expresion COMA expresion COMA • expresion
   21                 | expresion COMA expresion COMA • expresion COMA expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 83


Estado 82

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER • saltos lista_acciones FINIMAGEN

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 84


Estado 83

   20 lista_parametros: expresion COMA expresion COMA expresion •
   21                 | expresion COMA expresion COMA expresion • COMA expresion
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    COMA  desplazar e ir al estado 85
    '+'   desplazar e ir al estado 39
    '-'   desplazar e ir al estado 40
    '*'   desplazar e ir al estado 41
    '/'   desplazar e ir al estado 42

    COMA  [reduce usando la regla 20 (lista_parametros)]


Estado 84

    3 saltos: saltos • '\n'
   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER saltos • lista_acciones FINIMAGEN

    IDENTIFICADOR  desplazar e ir al estado 86
    PONER          desplazar e ir al estado 87
    BORRAR         desplazar e ir al estado 88
    HORIZONTAL     desplazar e ir al estado 89
    VERTICAL       desplazar e ir al estado 90
    PAUSA          desplazar e ir al estado 91
    '\n'           desplazar e ir al estado 5

    lista_acciones  ir al estado 92
    instruccion     ir al estado 93


Estado 85

   21 lista_parametros: expresion COMA expresion COMA expresion COMA • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 94


Estado 86

   43 instruccion: IDENTIFICADOR • ASIGNACION expresion

    ASIGNACION  desplazar e ir al estado 95


Estado 87

   38 instruccion: PONER • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 96


Estado 88

   39 instruccion: BORRAR • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 97


Estado 89

   40 instruccion: HORIZONTAL • IDENTIFICADOR expresion

    IDENTIFICADOR  desplazar e ir al estado 98


Estado 90

   41 instruccion: VERTICAL • IDENTIFICADOR expresion

    IDENTIFICADOR  desplazar e ir al estado 99


Estado 91

   42 instruccion: PAUSA • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 100


Estado 92

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER saltos lista_acciones • FINIMAGEN
   37 lista_acciones: lista_acciones • saltos instruccion

    FINIMAGEN  desplazar e ir al estado 101

    $default  reduce usando la regla 2 (saltos)

    saltos  ir al estado 102


Estado 93

   36 lista_acciones: instruccion •

    $default  reduce usando la regla 36 (lista_acciones)


Estado 94

   21 lista_parametros: expresion COMA expresion COMA expresion COMA expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 21 (lista_parametros)


Estado 95

   43 instruccion: IDENTIFICADOR ASIGNACION • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 103


Estado 96

   38 instruccion: PONER IDENTIFICADOR •

    $default  reduce usando la regla 38 (instruccion)


Estado 97

   39 instruccion: BORRAR IDENTIFICADOR •

    $default  reduce usando la regla 39 (instruccion)


Estado 98

   40 instruccion: HORIZONTAL IDENTIFICADOR • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 104


Estado 99

   41 instruccion: VERTICAL IDENTIFICADOR • expresion

    NUM            desplazar e ir al estado 24
    NUMREAL        desplazar e ir al estado 25
    IDENTIFICADOR  desplazar e ir al estado 26
    PAR_IZQ        desplazar e ir al estado 27

    expresion  ir al estado 105


Estado 100

   42 instruccion: PAUSA expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 42 (instruccion)


Estado 101

   35 imagen: IMAGEN PAR_IZQ expresion COMA expresion COMA CADENA PAR_DER saltos lista_acciones FINIMAGEN •

    $default  reduce usando la regla 35 (imagen)


Estado 102

    3 saltos: saltos • '\n'
   37 lista_acciones: lista_acciones saltos • instruccion

    IDENTIFICADOR  desplazar e ir al estado 86
    PONER          desplazar e ir al estado 87
    BORRAR         desplazar e ir al estado 88
    HORIZONTAL     desplazar e ir al estado 89
    VERTICAL       desplazar e ir al estado 90
    PAUSA          desplazar e ir al estado 91
    '\n'           desplazar e ir al estado 5

    instruccion  ir al estado 106


Estado 103

   43 instruccion: IDENTIFICADOR ASIGNACION expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 43 (instruccion)


Estado 104

   40 instruccion: HORIZONTAL IDENTIFICADOR expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 40 (instruccion)


Estado 105

   41 instruccion: VERTICAL IDENTIFICADOR expresion •
   47 expresion: expresion • '+' expresion
   48          | expresion • '-' expresion
   49          | expresion • '*' expresion
   50          | expresion • '/' expresion

    '+'  desplazar e ir al estado 39
    '-'  desplazar e ir al estado 40
    '*'  desplazar e ir al estado 41
    '/'  desplazar e ir al estado 42

    $default  reduce usando la regla 41 (instruccion)


Estado 106

   37 lista_acciones: lista_acciones saltos instruccion •

    $default  reduce usando la regla 37 (lista_acciones)
